# federated-learning-tutorial

./: .dockerignore  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml
notebooks/: 01_introduction_to_federated_learning.ipynb  02_dataset_and_model.ipynb  03_flower_client.ipynb  04_flower_server.ipynb  05_running_federated_learning.ipynb  06_data_heterogeneity_visualization.ipynb
notebooks/.ipynb_checkpoints/: 01_introduction_to_federated_learning-checkpoint.ipynb  02_dataset_and_model-checkpoint.ipynb  05_running_federated_learning-checkpoint.ipynb
src/fltutorial/: client.py  datahandler.py  server.py  task.py
