[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frugal-ai"
version = "0.1.0"
description = "Federated Learning Tutorial"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "matplotlib",
  "flwr",
  "flwr-datasets[vision]",
  "datasets",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["fltutorial*"]

# Flower configuration for federated learning
[tool.flwr.app]
publisher = "frugal-ai"

[tool.flwr.app.components]
serverapp = "fltutorial.server:app"
clientapp = "fltutorial.client:app"

[tool.flwr.app.config]
num-server-rounds = 2
learning-rate = 0.01
local-epochs = 3
batch-size = 32
fraction-evaluate = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3